created new output.html for the representation of output

--- a/templates/tree.html
+++ b/templates/tree.html
@@ -28,21 +28,21 @@
                             <li><a href="#">Sub-choice 3</a></li>
                         </ul>
                     </li>
-                    <li><a href="#!">choice C</a>
+                    <li><a href="#!">add group</a>
                         <ul>
                             <li><a href="#">Sub-choice 1</a></li>
                             <li><a href="#">Sub-choice 2</a></li>
                             <li><a href="#">Sub-choice 3</a></li>
                         </ul>
                     </li>
-                    <li><a href="#!">choice D</a>
+                    <li><a href="#!">add meter</a>
                         <ul>
                             <li><a href="#">Sub-choice 1</a></li>
                             <li><a href="#">Sub-choice 2</a></li>
                             <li><a href="#">Sub-choice 3</a></li>
                         </ul>
                     </li>
-                    <li><a href="#!">choice E</a>
+                    <li><a href="#!">bundle</a>
                         <ul>
                             <li><a href="#">Sub-choice 1</a></li>
                             <li><a href="#">Sub-choice 2</a></li>
