edited the output file as to show the output heading at the top

--- a/templates/output.html
+++ b/templates/output.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>{{ command }}</h2>
+    <h1>Output is:</h1>
+    <h2>{{ command }}</h2>
 
 {% endblock %}
